--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Grayscale - Start Bootstrap Theme</title>
+    <title>Raktim Mitra</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -77,7 +77,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Raktim Mitra</h1>
+                        <h2 class="brand-heading">Raktim Mitra</h2>
                         <p class="intro-text">Indian Institute of Technology, Kanpur
                             <br>Computer Science and Engineering</p>
                         <a href="#about" class="btn btn-circle page-scroll">
