--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                     <li>
-                        <a href="wtf">cv</a>
+                        <a href="150562_Raktim_Mitra.docx">cv</a>
                     </li>
                 </ul>
             </div>
@@ -71,13 +71,13 @@
         <!-- /.container -->
     </nav>
 
-    <!-- Intro Header -->
+    <!-- Intro Header class="brand-heading"-->
     <header class="intro">
         <div class="intro-body">
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h2 class="brand-heading">Raktim Mitra</h2>
+                        <h1 >Raktim Mitra</h1>
                         <p class="intro-text">Indian Institute of Technology, Kanpur
                             <br>Computer Science and Engineering</p>
                         <a href="#about" class="btn btn-circle page-scroll">
