--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <h2>Old Life</h2>
                     <p>I am a Bengali and my hometown is Madhyamgram,Kolkata,West Bengal</p>
                     <p>I am an ex-student of Ramakrishna Mission Vidyalaya, Narendrapur where I spent 8 golden years of my life. Here is a blog (which I try to maintain) about my life and my interests .</p>
-                    <a href="" class="btn btn-default btn-lg">Visit My Blog</a>
+                    <a href="lifeandlikesofraktim.blogspot.com" class="btn btn-default btn-lg">Visit My Blog</a>
                 </div>
             </div>
         </div>
