bengalee spelling check

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Old Life</h2>
-                    <p>I am a Bengali and my hometown is Madhyamgram,Kolkata,West Bengal</p>
+                    <p>I am a Bengalee and my hometown is Madhyamgram,Kolkata,West Bengal</p>
                     <p>I am an ex-student of Ramakrishna Mission Vidyalaya, Narendrapur where I spent 8 golden years of my life. Here is a blog (which I try to maintain) about my life and my interests .</p>
                     <a href="https://lifeandlikesofraktim.blogspot.com" class="btn btn-default btn-lg">Visit My Blog</a>
                 </div>
