--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                     <li>
-                        <a href="150562_Raktim_Mitra.docx">cv</a>
+                        <a href="150562_Raktim_Mitra.pdf">cv</a>
                     </li>
                 </ul>
             </div>
@@ -136,6 +136,7 @@
                         <a href="mailto:timkartar7879@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-google fa-fw"></i> <span class="network-name">GMail</span></a>
                     </li>
                 </ul>
+                <iframe src="https://www.facebook.com/plugins/follow?href=https%3A%2F%2Fwww.facebook.com%2Fraktim.mitra.92&amp;layout=standard&amp;show_faces=true&amp;colorscheme=light&amp;width=450&amp;height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:80px;color:#ffffff;" allowTransparency="true"></iframe>
             </div>
         </div>
     </section>
