--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About Me</h2>
-                <p>I am a 3rd year undergraduate at IIT Kanpur in the CSE department . My primary academic interests are Quantum Computing, Bioinformatics, Neuropsychology, Relativity. I am starting to look at other fields like Cyber Security and Machine Learning . </p>
+                <p>I am a 3rd year undergraduate at IIT Kanpur in the CSE department . My primary academic interests are Machine Learning, Algorithms, Quantum Computing, Bioinformatics, Relativity. I am starting to look at other fields like Cyber Security Cognitive Science. </p>
                 <p>Other than academics I have a huge interst in Football (I am a huge fan of Lionel Messi) , Painting , Music and Books . Have a look at my  <a href="">other interests !</a> </p>
                 
             </div>
