--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                     <li>
-                        <a href="150562_Raktim_Mitra.pdf">cv</a>
+                        <a href="Resume.pdf">cv</a>
                     </li>
                 </ul>
             </div>
