--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               <h3 class="mb-0">Recent Highlights</h3>
               <div class="subheading mb-3">My DAAD scholarship certificate -> <a href="https://timkartar.github.io/Scholarship certificate_0000891229-3.PDF">daad.PDF</a></div>
            	  <div class="subheading mb-3">My DAAD internship completion certificate -> <a href="https://timkartar.github.io/soedinglab_letter.PDF">soedinglab_letter.PDF</a></div>
-              <div class="subheading mb-3">My GRE Score Report -> <a href="https://timkartar.github.io/toefl.pdf">gre.pdf</a></div>
+              <div class="subheading mb-3">My GRE Score Report -> <a href="https://timkartar.github.io/gre.pdf">gre.pdf</a></div>
               <div class="subheading mb-3">My TOEFL Score Report -> <a href="https://timkartar.github.io/toefl.pdf">toefl.pdf</a></div>
               <!-- <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p> -->
             </div>
